# Copyright (C) 2011 George Silvis, III <george.iii.silvis@gmail.com> 

#
# This file is part of evenless.
#
# evenless is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# evenless is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# evenless.  If not, see <http://www.gnu.org/licenses/>.
#


AC_INIT([evenless], [0.0.5], [george.iii.silvis@gmail.com])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([-Wall -Werror foreign no-define])


AC_CONFIG_HEADERS([src/config.h])
AC_PROG_CC
AC_CONFIG_FILES([Makefile])


AC_CHECK_HEADERS([notmuch.h])
AC_CHECK_HEADERS([ncurses.h])

AC_OUTPUT
